integration test for declining friend requests

--- a/views/settings/index.hbs
+++ b/views/settings/index.hbs
@@ -56,7 +56,7 @@
             name="requester"
             value={{this._id}}
           />
-          <input class="accept-button" type="submit" value="Decline" />
+          <input class="decline-button" type="submit" value="Decline" />
         </form>
       </li>
     </ul>
