--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,4 +1,8 @@
 <h1 class="title">Hi {{user.firstName}}! Welcome to your profile</h1> 
+<div class="card">
+
+
+</div>
 
 <a href="requests" class="friend-requests" > Friend requests </a>
                 
