--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="/stylesheets/components.css" />
+</head>
+
+
+<body>
 <h1 class="title">Hi {{user.firstName}}! Welcome to your profile</h1>
 
 <form
@@ -7,14 +19,15 @@
   method="POST"
 >
   <input
+    class="input-text2"
     id="message"
     type="text"
     name="message"
     placeholder="Make a new post"
   />
   <input id="user" type="hidden" name="user" value={{user._id}} />
-  <input class="choose-file-btn" type="file" name="image" />
-  <input type="submit" value="Submit" />
+  <input class="choose-file-btn" class="choose-file-btn" type="file" name="image" />
+  <input class="input-button2" type="submit" value="Submit" />
 </form>
 
 <ul class="posts">
@@ -105,3 +118,6 @@
     {{/each}}
   </div>
 </ul>
+
+</body>
+</html>
