--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,10 +2,9 @@
   <head>
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/layout.css" />
-    <link rel="stylesheet" href="/stylesheets/postcards.css">
+    <link rel="stylesheet" href="/stylesheets/postcards.css" />
   </head>
   <body>
-
 
     <!-- Navbar section -->
     <nav class="navbar">
@@ -24,15 +23,16 @@
                  <a href="/users/index" class="navbar__links" id="my-profile">My Profile</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/settings/{{this.id}}" class="navbar__links" id="settings">Settings</a>
+                    <a href="/users/settings" class="navbar__links" id="settings">Settings</a>
                 </li>
                 <li class="navbar__btn">
-                  <form action="/sessions?_method=DELETE" method="POST">
+                  <form id="log-out" action="/sessions?_method=DELETE" method="POST">
                     <input type="submit" class="button" value="Log Out" />
                   </form>
                 </li>
             </ul>
-        </div>
+
+      </div>
     </nav>
     {{{body}}}
   </body>
