--- a/views/users/:id.hbs
+++ b/views/users/:id.hbs
@@ -1,7 +1,27 @@
+<body>
 <h1 class="title">{{user.firstName}} {{user.lastName}}'s Profile</h1>
 
-<ul class="posts">
-
+{{#if status}}
+<ul class="friend-request">
+                  <form id="add-friend" action="/users/{{user._id}}" method="POST">
+                    <input id="status" name="requests" type="submit" value="Add friend"/>
+                  </form>
+                </ul>
+{{/if}}
+  {{#if awaiting}}
+ <h4 class="status" >Awaiting Confirmation</h4>
+  {{/if}}
+  {{#if confirmed}}
+  You are friends
+{{/if}}
+<h4 class="status" >You're friends</h4>
+<ul class="friend-request">
+                  <form id="accept-request" action="/users/requests" method="GET">
+                    <input id="status" name="requests" type="submit" value="Accept Friend Request"/>
+                  </form>
+                </ul>
+{{/if}}
+<ul class="posts"></ul>
   <div>
     {{#each posts}}
       {{! <li> }}
@@ -24,8 +44,9 @@
         <div class="likes">
           {{this.likes.length}}
           likes
-          {{this.createdAt}}
-
+          <div class="tooltip">{{timeAgo this.createdAt}}
+              <span class="tooltiptext">{{dateFormat this.createdAt "LLLL"}}</span>
+          </div>
           <form id="likes-form" action="/posts/{{this._id}}" method="post">
 
             <input type="submit" value="likes" />
@@ -38,7 +59,7 @@
               <ul>
                 {{this.content}}
                 by
-                <a href="users/{{this.user._id}}" class="userLink">{{this.user.firstName}}</a>
+                <a href="{{this.user._id}}" class="userLink">{{this.user.firstName}}</a>
               </ul>
               <ul>
                 <form
@@ -76,3 +97,4 @@
     {{/each}}
   </div>
 </ul>
+</body>
