--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -78,10 +78,14 @@
               <ul>
                 {{this.content}}
                 by
+                {{#matches ../user._id this.user.id }}
+        You
+        {{else}}
                 <a
                   href="users/{{this.user._id}}"
                   class="userLink"
                 >{{this.user.firstName}}</a>
+          {{/matches}}
               </ul>
               <ul>
                 <form
