--- a/views/users/settings.hbs
+++ b/views/users/settings.hbs
@@ -15,7 +15,7 @@
 <div class="settings">
 
 
-  <div class="submit-settings-photo">
+<div class="submit-post-container">
   <form
     id="photo_change"
     action="/users/settings/photo"
