--- a/public/stylesheets/components.css
+++ b/public/stylesheets/components.css
@@ -102,26 +102,40 @@
   text-align: center;
 }
 
-.notification {
-  background-color: #555;
+.friend-requests {
+  background-color: #0175e4;
   color: white;
   text-decoration: none;
   padding: 15px 26px;
   position: relative;
   display: inline-block;
-  border-radius: 2px;
+  border-radius: 4px;
 }
 
-.notification:hover {
-  background: red;
+.friend-requests:hover {
+  background: #5495d1;
+  transition: 1s ease;
 }
 
-.notification .badge {
+.friend-requests .badge {
   position: absolute;
   top: -10px;
   right: -10px;
-  padding: 5px 10px;
+  padding: 7px 11px;
   border-radius: 50%;
   background: red;
   color: white;
+}
+
+
+form:hover .button {
+  background: #5495d1;
+  /* background: #fcb045; */
+  color: white;
+  transition: 1s ease;
+}
+
+.delete-button {
+  padding-top: 15px;
+  padding-left: 100px;
 }
