--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -18,9 +18,12 @@
   <span class="badge">{{user.requests.length}}</span> 
   {{/if}}
 </a>
+<a href="friendslist" class="friend-requests"> Friends List </a>
 </div>
 
 <div class="submit-post-container">
+
+
 <form
   id="new-post-form"
   action="/posts"
