--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -52,6 +52,7 @@
           </div></h5>
             </div>
             <div></div>
+            {{#matches this.user._id ../user._id}}
             <div class="delete-post-button">
         {{! delete post button }}
        <div class="delete-button">
@@ -64,8 +65,8 @@
         </form>
         </div>
         </div>
+        {{/matches}}
         </div>
-
         {{!-- {{do not render an image if this.photo is null}} --}}
         <div id="row2">
         <div class="photos">
