--- a/public/stylesheets/postcards.css
+++ b/public/stylesheets/postcards.css
@@ -206,6 +206,7 @@ input.button:hover {
   grid-area: name-and-date;
 }
 
+
 /* .row4-container{
   display: grid;
   grid-template-columns: auto auto auto;
@@ -227,4 +228,11 @@ input.button:hover {
 
 #row4#comments {
   grid-area: comments;
+}
+
+.photos img {
+  height: auto;
+  width: auto;
+  padding-left: 25px;
+  padding-right: 25px;
 }
