--- a/views/users/friends.hbs
+++ b/views/users/friends.hbs
@@ -1,6 +1,16 @@
-<div class="submit-post-container">
 
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="/stylesheets/components.css" />
+</head>
+<body>
   {{#each list}}
+  <div class="submit-post-container">
     <ul>
       {{#if this.photo.photoExists}}
 
@@ -19,7 +29,10 @@
       </a>
 
     </ul>
-
+  </div>
   {{/each}}
 
 </div>
+</ul>
+</body>
+</html>
