added name, surname, DOB to sign up. tests passed and feature implemented

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,4 +1,11 @@
+<div id="sign_up">Sign up here for a new Acebook account! </div>
 <form id="new-user-form" action="/users" method="post">
+  <label for="first_name">First Name: </label>
+  <input id="first_name" type="text" name="first_name" value="">
+  <label for="last_name">Last Name: </label>
+  <input id="last_name" type="text" name="last_name" value="">
+  <label for="DOB">Date of birth: </label>
+  <input id= "DOB" type="date" name="DOB" max="2022-11-15" value="">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
   <label for="password">Password: </label>
