--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
     <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out">
     </form>
+    <div>Welcome to Acebook!</div>
     {{{body}}}
   </body>
 </html>
