--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,8 +1,10 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-  <li>{{this.message}}</li> 
-  <li>{{this.likes}} likes</li>
+  <p>
+  <li>{{this.message}}  - {{this.likes}} likes</li>
+  <li>{{this.createdAt}} created</li>
+  </p>
   {{/each}}
 </ul>
 
