add testing for post sorting by timestamp

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -3,7 +3,7 @@
   {{#each posts}}
   <p>
   <li>{{this.message}}  - {{this.likes}} likes</li>
-  <li>{{this.createdAt}} created</li>
+  {{!-- <li>{{this.createdAt}} created</li> --}}
   </p>
   {{/each}}
 </ul>
