Started CSS styling - work in progress

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,20 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	transition: all 0.4s;
+	font-family: -apple-system,
+	BlinkMacSystemFont,
+	"Segoe UI",
+	Roboto,
+	Helvetica,
+	Arial,
+	sans-serif,
+	"Apple Color Emoji",
+	"Segoe UI Emoji",
+	"Segoe UI Symbol";
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -5,4 +22,136 @@ body {
 
 a {
   color: #00B7FF;
+}
+
+.container{
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+/* Navbar section */
+
+.nav{
+	width: 97.1%;
+	height: 65px;
+	position: fixed;
+	line-height: 65px;
+	text-align: center;
+	background-color: rgba(0,0,255,0.8);
+}
+
+.nav div.logo{
+	width: 180px;
+	height: 10px;
+	position: absolute;
+}
+
+.nav div.logo a{
+	text-decoration: none;
+	color: #fff;
+	font-size: 1.8em;
+	text-transform: uppercase;
+}
+
+.nav div.logo a:hover {
+	color: #c0c0c0;
+}
+
+.nav div.main_list{
+	width: 600px;
+	height: 65px;
+	float: right;
+}
+
+.nav div.main_list ul{
+	width:100%;
+	height: 65px;
+	display: flex;
+	list-style: none;
+}
+
+.nav div.main_list ul li{
+	width: 120px;
+	height: 65px;
+}
+
+.nav div.main_list ul li a{
+	text-decoration: none;
+	color: #fff;
+	line-height: 65px;
+	text-transform: uppercase;
+}
+
+.nav div.main_list ul li a:hover{
+	color: #c0c0c0;
+}
+
+
+
+/* Home section */
+
+.home{
+	width: 100%;
+	height: 20vh;
+	background-color: #ddd;
+}
+
+/* Medai qurey section */
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+	
+	.container{
+			margin: 0;
+	}
+	
+}
+
+
+
+
+@media screen and (max-width:768px) {
+	
+	.container{
+			margin: 0;
+	}
+	
+	.nav div.logo{
+			margin-left: 15px;
+	}
+	
+	.nav div.main_list{
+			width: 100%;
+			margin-top: 65px;
+			height: 0px;
+			overflow: hidden;
+	}
+	
+	.nav div.show_list{
+			height: 200px;
+	}
+	
+	.nav div.main_list ul{
+			flex-direction: column;
+			width: 100%;
+			height: 200px;
+			top: 80px;
+			right: 0;
+			left: 0;
+	}
+	
+	.nav div.main_list ul li{
+			width: 100%;
+			height: 40px;
+			background-color:rgba(0,0,255,0.8);
+	}
+	
+	.nav div.main_list ul li a{
+		text-align: center;
+			line-height: 40px;
+			width: 100%;
+			height: 40px;
+			display: table;
+	}
+	
+	
 }
