--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,9 +5,34 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <form action='/sessions?_method=DELETE' method='POST'>
-      <input type="submit" value="Log Out">
-    </form>
+  <nav class="nav">
+      <div class="container">
+          <div class="logo">
+              <a href="#">Acebook</a>
+          </div>
+          <div class="main_list" id="mainListDiv">
+              <ul>
+                  <li><a href="/posts">Posts</a></li>
+                  <li><a href="/users/new">Sign Up</a></li>
+                  <form action='/sessions?_method=DELETE' method='POST'>
+                    <input type="submit" value="Log Out">
+                  </form>
+              </ul>
+          </div>
+          <div class="media_button">
+              <button class="main_media_button" id="mediaButton">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+              </button>
+          </div>
+      </div>
+  </nav>
+    
+<section class="home"></section>
     {{{body}}}
   </body>
+
+  
+
 </html>
