--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -2,8 +2,8 @@
 <ul class="posts">
   {{#each posts}}
   <p>
-  <li>{{this.message}}  - {{this.likes}} likes</li>
-  {{!-- <li>{{this.createdAt}} created</li> --}}
+    <li>{{this.message}} - {{this.likes}} likes</li>
+    {{!-- <li>created at: {{this.createdAt}}</li> --}}
   </p>
   {{/each}}
 </ul>
