--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
   <nav class="nav">
       <div class="container">
           <div class="logo">
-              <a href="#">Acebook</a>
+              <a href="/">Acebook</a>
           </div>
           <div class="main_list" id="mainListDiv">
               <ul>
