--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,13 +9,9 @@
     {{!-- if not logged in -> see login button and message telling you to login --}}
     
       {{#if newUser}}
-        
         <p>You need to login.</p>
-      
-      {{else}}
-        
-       
-       <p>You are logged in.</p>
+      {{else}}  
+       <p>Hello, {{current_user}}, you are logged in.</p>
         <form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out">
         </form>
