--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -13,4 +13,5 @@
   <label for="message">Message: </label>
   <input id="message" type="text" name="message" value="">
   <input type="submit" value="Submit">
+  <input id="cancel" type="button" onclick="javascript:window.location='/posts';" value='Cancel'>
 </form>
