--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,16 +14,13 @@
               <ul>
                   <li><a href="/posts">Posts</a></li>
                   <li><a href="/users/new">Sign Up</a></li>
+                  <li><a href="/sessions/new">Sign In</a></li>
                   <form action='/sessions?_method=DELETE' method='POST'>
                     <input type="submit" value="Log Out">
                   </form>
               </ul>
           </div>
           <div class="media_button">
-              <button class="main_media_button" id="mediaButton">
-                  <span></span>
-                  <span></span>
-                  <span></span>
               </button>
           </div>
       </div>
