--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,11 +1,13 @@
-<h1>Sign up</h1>
+<div class="container2">
+  <h1 class="header">Sign Up</h1>
 
-<form id="new-user-form" action="/users" method="post">
-  <label for="email">Email: </label>
-  <input id="email" type="email" name="email" value="">
-  <label for="name">Name: </label>
-  <input id="name" type="text" name="name" value="">
-  <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value="">
-  <input id="submit" type="submit" value="Submit">
-</form>
+  <form class="form" id="new-user-form" action="/users" method="post">
+    <label for="email">Email: </label>
+    <input id="email" type="email" name="email" value="">
+    <label for="name">Name: </label>
+    <input id="name" type="text" name="name" value="">
+    <label for="password">Password: </label>
+    <input id="password" type="password" name="password" value="">
+    <input id="submit" type="submit" value="Submit">
+  </form>
+</div>
