added sign up and sign in links to homepage

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
           
       {{/if}}    
 
-    <div>Welcome to Acebook!</div>
+    <div>Share your life with your friends!</div>
 
     {{{body}}}
   </body>
