--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,6 +89,8 @@ a {
 .nav div.main_list ul li{
 	width: 120px;
 	height: 65px;
+	color: #fff;
+	text-transform: uppercase;
 }
 
 .nav div.main_list ul form{
