--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,10 @@
                     <form action='/sessions?_method=DELETE' method='POST'>
                       <input type="submit" value="Log Out">
                     </form>
+                    <li>{{username}}</li>
                   {{/if}}
+
+                  <li>{{name}}</li>
               </ul>
           </div>
           <div class="media_button">
